test/extern/bradc/classes/extern_subclasses.chpl
class C {
  var x: real;
}

extern class C2: C {
  var x: real;
}

extern class D {
  var x: real;
}

extern class D2 : D {
  var x: real;
}
